squash unstable branch to 2014.7.2-14. see README.md for changes

--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "bin": { "proxy-lite": "proxy-lite.js" },
+  "bin": { "proxy-lite": "node-proxy-lite.js" },
   "contributors": [{ "name": "kai zhu", "email": "kaizhu256@gmail.com" }],
   "description": "lightweight nodejs proxy server with no external dependencies",
   "devDependencies": {
     "istanbul": "0.2.x",
     "jslint-lite": "2014.x.x"
   },
-	"license": "MIT",
-  "main": "proxy-lite.js",
+  "engines": { "node": ">=0.10.x" },
+  "main": "node-proxy-lite.js",
   "name": "proxy-lite",
   "os": ["darwin", "linux"],
-  "scripts": {
-    "install": "./build.sh shNpmInstall",
-    "test": "./build.sh shNpmTest"
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/kaizhu256/node-proxy-lite.git"
   },
-  "version": "2014.7.2-1"
+  "scripts": {
+    "install": "./utility.sh shNpmInstall",
+    "start": "./utility.sh shNpmStart",
+    "test": "./utility.sh shNpmTest"
+  },
+  "version": "2014.7.2-14"
 }
